// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb has a separator prop that can be a custom component 1`] = `
<ul
  className="list"
>
  <li
    className="item"
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      Home
    </a>
  </li>
  <li
    className="item false"
  >
    <span
      className="separator"
    >
      <span>
        🔍
      </span>
    </span>
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      white
    </a>
  </li>
  <li
    className="item false"
  >
    <span
      className="separator"
    >
      <span>
        🔍
      </span>
    </span>
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      white1
    </a>
  </li>
  <li
    className="item item--selected"
  >
    <span
      className="separator"
    >
      <span>
        🔍
      </span>
    </span>
    white1.1
  </li>
</ul>
`;

exports[`Breadcrumb has customizable translations 1`] = `
<ul
  className="list"
>
  <li
    className="item"
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      ROOT_LABEL
    </a>
  </li>
  <li
    className="item false"
  >
    <span
      className="separator"
    />
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      white
    </a>
  </li>
  <li
    className="item false"
  >
    <span
      className="separator"
    />
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      white1
    </a>
  </li>
  <li
    className="item item--selected"
  >
    <span
      className="separator"
    />
    white1.1
  </li>
</ul>
`;

exports[`Breadcrumb outputs the default breadcrumb 1`] = `
<ul
  className="list"
>
  <li
    className="item"
  >
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      Home
    </a>
  </li>
  <li
    className="item false"
  >
    <span
      className="separator"
    />
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      white
    </a>
  </li>
  <li
    className="item false"
  >
    <span
      className="separator"
    />
    <a
      className="link"
      href="#"
      onClick={[Function]}
    >
      white1
    </a>
  </li>
  <li
    className="item item--selected"
  >
    <span
      className="separator"
    />
    white1.1
  </li>
</ul>
`;
